Fixes error in Firefox: error handler backdrop is overlaping the tasks panel

--- a/src/client/app/flogo.flows.detail.error-panel/components/error-panel.component.less
+++ b/src/client/app/flogo.flows.detail.error-panel/components/error-panel.component.less
@@ -62,7 +62,7 @@
 .layout__side {
   flex-direction: column;
   min-width: 321px;
-  width: 22.5%;
+  width: 29%;
 }
 
 .wrapper {
